# wasm-calc

./: Cargo.toml  README.md
examples/: add.wat  calculator.witx  errno.witx  using_add.wat
examples/using_add/: Cargo.toml
examples/using_add/src/: lib.rs
src/: calculator.rs  main.rs
